travail sur le parcours

--- a/index.html
+++ b/index.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Sarabun&display=swap" rel="stylesheet">
     <title>
         Richard Bale
     </title>
 </head>
 <body>
+    <main>
+        <section class="container">
+            <div>
+               <p class="parcours">Parcours</p>
+            </div>
+            <div>
+
+                <p class="texte">
+                    Canadian High Commission, Cameroon
+                    High Commissioner
+                    Nom de l’entreprise Canadian High Commission, Cameroon
+                    Dates d’emploi oct. 2019 – Aujourd’hui
+                    Durée d’emploi 5 mois
+                    Lieu Yaounde, Cameroon
+                    Global Affairs Canada | Affaires mondiales Canada
+                    Nom de l’entreprise Global Affairs Canada | Affaires mondiales Canada
+                    Durée totale 2 ans
+                    Intitulé du poste Acting Consul General, Canadian Consulate General in Monterrey, Mexico
+                    Dates d’emploi août 2019
+                    Durée d’emploi 1 mois
+                    Intitulé du poste Foreign Service Language School
+                    Dates d’emploisept. 2018 – juil. 2019
+                    Durée d’emploi 11 mois
+                    Intitulé du poste Chargé d'Affaires, Port-au-Prince, Haiti
+                    Dates d’emploi août 2018
+                    Durée d’emploi 1 mois
+                    Lieu Port au Prince, Haiti
+                    Intitulé du poste Director, North American Commercial Network
+                    Dates d’emploi janv. 2018 – juil. 2018
+                    Durée d’emploi 7 mois.
     
+    </p>
+            </div>
+        </section>
+     
+    </main>
+  
 </body>
 </html>
